# nautilus_trader

template/: Cargo.toml  Makefile  README.md  pyproject.toml
template/src/: lib.rs
template/template/: __init__.py
template/tests/: test_template.py
